// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledCountdown renders correctly 1`] = `
<ThemeProvider
  theme={
    Object {
      "breakpoint_available_width": Object {
        "large": "988px",
        "medium": "732px",
        "xlarge": "1244px",
        "xxlarge": "1464px",
      },
      "breakpoint_available_width_values": Object {
        "large": 988,
        "medium": 732,
        "xlarge": 1244,
        "xxlarge": 1464,
      },
      "breakpoint_values": Object {
        "large": 1024,
        "medium": 768,
        "small": 0,
        "xlarge": 1280,
        "xxlarge": 1500,
      },
      "color": Object {
        "alert": "#e81a3f",
        "black": "#1a1a1a",
        "blue_gray": "#c5ced9",
        "books": "#ff7f26",
        "comics": "#ff5400",
        "dark_blue": "#092344",
        "dark_blue_gray": "#39424d",
        "dark_gray": "#333",
        "faint_blue_gray": "#f2f6fa",
        "faint_gray": "#ccc",
        "fandom_aqua": "#00d6d6",
        "fandom_black": "#0e191a",
        "fandom_button_background": "#00cdd0",
        "fandom_coral": "#ff776d",
        "fandom_dark_gray": "#5f7a7b",
        "fandom_light_gray": "#f2f5f5",
        "fandom_link": "#088488",
        "fandom_link_hover": "#005252",
        "fandom_mid_light_gray": "#bed1cf",
        "fandom_middle_gray": "#7f9998",
        "fandom_navy": "#002a32",
        "fandom_purple": "#460084",
        "fandom_red": "#ee1a41",
        "fandom_warm_gray": "#eeecdc",
        "fandom_yellow": "#dfec24",
        "games": "#94d11f",
        "gold": "#e3bd00",
        "lifestyle": "#ffd000",
        "light_blue": "#1a5eb8",
        "light_blue_gray": "#e6ebf2",
        "light_gray": "#999",
        "link": "#00b7e0",
        "medium_gray": "#666",
        "message": "#008c8f",
        "mist_gray": "#e6e6e6",
        "movies": "#09d3bf",
        "music": "#c819ad",
        "night_sky": "#262626",
        "off_white": "#f6f6f6",
        "slate_gray": "#656e78",
        "social_facebook": "#3b5998",
        "social_googleplus": "#dd4b39",
        "social_instagram": "#e02d69",
        "social_line": "#00c300",
        "social_linkedin": "#0077b5",
        "social_meneame": "#ff6400",
        "social_nk": "#4077a7",
        "social_odnoklassniki": "#f96900",
        "social_reddit": "#ff4500",
        "social_tumblr": "#34465d",
        "social_twitter": "#1da1f2",
        "social_vkontakte": "#587ca3",
        "social_weibo": "#ff8140",
        "social_wykop": "#fb803f",
        "social_youtube": "#cd201f",
        "success": "#018c30",
        "tv": "#00b7e0",
        "warning": "#de5e33",
        "white": "#fff",
      },
      "color_theme": Object {
        "dark": Object {
          "c1": "#262626",
          "c2": "#1a1a1a",
          "c3": undefined,
          "c4": "#666",
          "c5": "#999",
          "c6": "#ccc",
          "c7": "#fff",
          "c8": "#e3bd00",
        },
        "light": Object {
          "c1": "#fff",
          "c2": "#f6f6f6",
          "c3": "#e6e6e6",
          "c4": "#ccc",
          "c5": undefined,
          "c6": "#333",
          "c7": "#666",
          "c8": "#e3bd00",
        },
      },
      "content_well_margin": "18px",
      "content_well_margin_value": 18,
      "font_family": "Rubik, Helvetica, Arial, sans-serif",
      "font_size": Object {
        "base": "16px",
        "l": "18px",
        "s": "14px",
        "xl": "24px",
        "xs": "12px",
        "xxl": "28px",
        "xxs": "10px",
        "xxxl": "36px",
        "xxxxl": "52px",
      },
      "font_size_value": Object {
        "base": 16,
        "l": 18,
        "s": 14,
        "xl": 24,
        "xs": 12,
        "xxl": 28,
        "xxs": 10,
        "xxxl": 36,
        "xxxxl": 52,
      },
      "font_weight": Object {
        "black": 900,
        "bold": 700,
        "light": 300,
        "medium": 500,
        "normal": 400,
      },
      "line_height": Object {
        "loose": 1.75,
        "none": 1,
        "normal": 1.5,
        "tight": 1.25,
      },
      "media": Object {
        "large_down": "only screen and (max-width: 1279px)",
        "large_only": "only screen and (min-width: 1024px) and (max-width: 1279px)",
        "large_up": "only screen and (min-width: 1024px)",
        "medium_down": "only screen and (max-width: 1023px)",
        "medium_only": "only screen and (min-width: 768px) and (max-width: 1023px)",
        "medium_up": "only screen and (min-width: 768px)",
        "small_down": "only screen and (max-width: 767px)",
        "small_only": "only screen and (max-width: 767px)",
        "small_up": "only screen",
        "xlarge_down": "only screen and (max-width: 1499px)",
        "xlarge_only": "only screen and (min-width: 1280px) and (max-width: 1499px)",
        "xlarge_up": "only screen and (min-width: 1280px)",
        "xxlarge_down": "only screen",
        "xxlarge_only": "only screen and (min-width: 1500px)",
        "xxlarge_up": "only screen and (min-width: 1500px)",
      },
    }
  }
>
  <StyledCountdown
    className={null}
    onTick={[Function]}
    stop={false}
  >
    <StyledCountdown__Wrapper
      className={null}
    >
      <div
        className="StyledCountdown__Wrapper-sc-1oil9oi-0 hvhDFI"
      >
        <StyledCountdown__Value>
          <span
            className="StyledCountdown__Value-sc-1oil9oi-1 kVILWS"
          >
            10
          </span>
        </StyledCountdown__Value>
        <StyledCountdown__AnimatedProgress
          level="high"
        >
          <svg
            className="StyledCountdown__AnimatedProgress-sc-1oil9oi-4 hNYCkg"
          >
            <StyledCountdown__CircleWithAnimation
              cx="17"
              cy="17"
              r="15"
            >
              <circle
                className="StyledCountdown__Circle-sc-1oil9oi-2 StyledCountdown__CircleWithAnimation-sc-1oil9oi-3 ZXNUt"
                cx="17"
                cy="17"
                r="15"
              />
            </StyledCountdown__CircleWithAnimation>
          </svg>
        </StyledCountdown__AnimatedProgress>
      </div>
    </StyledCountdown__Wrapper>
  </StyledCountdown>
</ThemeProvider>
`;

exports[`StyledCountdown renders correctly when stopped 1`] = `
<ThemeProvider
  theme={
    Object {
      "breakpoint_available_width": Object {
        "large": "988px",
        "medium": "732px",
        "xlarge": "1244px",
        "xxlarge": "1464px",
      },
      "breakpoint_available_width_values": Object {
        "large": 988,
        "medium": 732,
        "xlarge": 1244,
        "xxlarge": 1464,
      },
      "breakpoint_values": Object {
        "large": 1024,
        "medium": 768,
        "small": 0,
        "xlarge": 1280,
        "xxlarge": 1500,
      },
      "color": Object {
        "alert": "#e81a3f",
        "black": "#1a1a1a",
        "blue_gray": "#c5ced9",
        "books": "#ff7f26",
        "comics": "#ff5400",
        "dark_blue": "#092344",
        "dark_blue_gray": "#39424d",
        "dark_gray": "#333",
        "faint_blue_gray": "#f2f6fa",
        "faint_gray": "#ccc",
        "fandom_aqua": "#00d6d6",
        "fandom_black": "#0e191a",
        "fandom_button_background": "#00cdd0",
        "fandom_coral": "#ff776d",
        "fandom_dark_gray": "#5f7a7b",
        "fandom_light_gray": "#f2f5f5",
        "fandom_link": "#088488",
        "fandom_link_hover": "#005252",
        "fandom_mid_light_gray": "#bed1cf",
        "fandom_middle_gray": "#7f9998",
        "fandom_navy": "#002a32",
        "fandom_purple": "#460084",
        "fandom_red": "#ee1a41",
        "fandom_warm_gray": "#eeecdc",
        "fandom_yellow": "#dfec24",
        "games": "#94d11f",
        "gold": "#e3bd00",
        "lifestyle": "#ffd000",
        "light_blue": "#1a5eb8",
        "light_blue_gray": "#e6ebf2",
        "light_gray": "#999",
        "link": "#00b7e0",
        "medium_gray": "#666",
        "message": "#008c8f",
        "mist_gray": "#e6e6e6",
        "movies": "#09d3bf",
        "music": "#c819ad",
        "night_sky": "#262626",
        "off_white": "#f6f6f6",
        "slate_gray": "#656e78",
        "social_facebook": "#3b5998",
        "social_googleplus": "#dd4b39",
        "social_instagram": "#e02d69",
        "social_line": "#00c300",
        "social_linkedin": "#0077b5",
        "social_meneame": "#ff6400",
        "social_nk": "#4077a7",
        "social_odnoklassniki": "#f96900",
        "social_reddit": "#ff4500",
        "social_tumblr": "#34465d",
        "social_twitter": "#1da1f2",
        "social_vkontakte": "#587ca3",
        "social_weibo": "#ff8140",
        "social_wykop": "#fb803f",
        "social_youtube": "#cd201f",
        "success": "#018c30",
        "tv": "#00b7e0",
        "warning": "#de5e33",
        "white": "#fff",
      },
      "color_theme": Object {
        "dark": Object {
          "c1": "#262626",
          "c2": "#1a1a1a",
          "c3": undefined,
          "c4": "#666",
          "c5": "#999",
          "c6": "#ccc",
          "c7": "#fff",
          "c8": "#e3bd00",
        },
        "light": Object {
          "c1": "#fff",
          "c2": "#f6f6f6",
          "c3": "#e6e6e6",
          "c4": "#ccc",
          "c5": undefined,
          "c6": "#333",
          "c7": "#666",
          "c8": "#e3bd00",
        },
      },
      "content_well_margin": "18px",
      "content_well_margin_value": 18,
      "font_family": "Rubik, Helvetica, Arial, sans-serif",
      "font_size": Object {
        "base": "16px",
        "l": "18px",
        "s": "14px",
        "xl": "24px",
        "xs": "12px",
        "xxl": "28px",
        "xxs": "10px",
        "xxxl": "36px",
        "xxxxl": "52px",
      },
      "font_size_value": Object {
        "base": 16,
        "l": 18,
        "s": 14,
        "xl": 24,
        "xs": 12,
        "xxl": 28,
        "xxs": 10,
        "xxxl": 36,
        "xxxxl": 52,
      },
      "font_weight": Object {
        "black": 900,
        "bold": 700,
        "light": 300,
        "medium": 500,
        "normal": 400,
      },
      "line_height": Object {
        "loose": 1.75,
        "none": 1,
        "normal": 1.5,
        "tight": 1.25,
      },
      "media": Object {
        "large_down": "only screen and (max-width: 1279px)",
        "large_only": "only screen and (min-width: 1024px) and (max-width: 1279px)",
        "large_up": "only screen and (min-width: 1024px)",
        "medium_down": "only screen and (max-width: 1023px)",
        "medium_only": "only screen and (min-width: 768px) and (max-width: 1023px)",
        "medium_up": "only screen and (min-width: 768px)",
        "small_down": "only screen and (max-width: 767px)",
        "small_only": "only screen and (max-width: 767px)",
        "small_up": "only screen",
        "xlarge_down": "only screen and (max-width: 1499px)",
        "xlarge_only": "only screen and (min-width: 1280px) and (max-width: 1499px)",
        "xlarge_up": "only screen and (min-width: 1280px)",
        "xxlarge_down": "only screen",
        "xxlarge_only": "only screen and (min-width: 1500px)",
        "xxlarge_up": "only screen and (min-width: 1500px)",
      },
    }
  }
>
  <StyledCountdown
    className={null}
    onTick={[Function]}
    stop={true}
  >
    <StyledCountdown__Wrapper
      className={null}
    >
      <div
        className="StyledCountdown__Wrapper-sc-1oil9oi-0 hvhDFI"
      >
        <StyledCountdown__Value>
          <span
            className="StyledCountdown__Value-sc-1oil9oi-1 kVILWS"
          >
            10
          </span>
        </StyledCountdown__Value>
        <StyledCountdown__AnimatedProgress
          level="high"
        >
          <svg
            className="StyledCountdown__AnimatedProgress-sc-1oil9oi-4 hNYCkg"
          >
            <StyledCountdown__Circle
              cx="17"
              cy="17"
              r="15"
            >
              <circle
                className="StyledCountdown__Circle-sc-1oil9oi-2 ggtQdt"
                cx="17"
                cy="17"
                r="15"
              />
            </StyledCountdown__Circle>
          </svg>
        </StyledCountdown__AnimatedProgress>
      </div>
    </StyledCountdown__Wrapper>
  </StyledCountdown>
</ThemeProvider>
`;
